2018-12-30  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 43944: Martijn: Doc/Zsh/options.yo, README, Src/math.c,
	Test/C01arith.ztst: apply NO_UNSET consistently to arithmetic.

	* unposted: Test/D04parameter.ztst: test for 43938.

2018-12-30  dana  <dana@dana.is>

	* 43914 (tweaked): Completion/Unix/Command/_composer: Add
	completion for Composer

	* 43930: Completion/Base/Utility/_multi_parts: Improve performance

	* unposted (per 43938): Src/utils.c: Avoid segfault when
	unmetafying empty string

2018-12-29  dana  <dana@dana.is>

	* 43953 (tweaked per 43954): Src/utils.c, Test/V09datetime.ztst:
	Fix rounding/truncation error in %. time-format specifier

2018-12-24  dana  <dana@dana.is>

	* 43935 (tweaked): Src/Modules/datetime.c, Test/V09datetime.ztst:
	Fix test error on 32-bit machines, reject too-large nanosecond
	values given to strftime

2018-12-23  dana  <dana@dana.is>

	* 43928: Completion/Base/Utility/_alternative: Evaluate (...)
	action syntax as with _arguments

2018-12-21  Bart Schaefer  <schaefer@zsh.org>

	* 43921: ${\var} should be an error

2018-12-19  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk, Etc/FAQ.yo, README: update for
	5.6.2-test-2.

2018-12-19  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted c.f. 43913: Functions/Zle/edit-command-line: emulate
	-L zsh to avoid bad effects with globsubst.

2018-12-17  dana  <dana@dana.is>

	* 43897: Completion/Darwin/Command/_xcode-select,
	Completion/Unix/Command/_asciidoctor,
	Completion/Unix/Command/_asciinema,
	Completion/Unix/Command/_host, Completion/Unix/Command/_mkfifo,
	Completion/Unix/Command/_mknod, Completion/Unix/Command/_shred,
	Completion/Unix/Command/_tail, Completion/Unix/Command/_tty,
	Completion/Unix/Command/_visudo, Completion/Unix/Type/_hosts:
	Add/update various completion functions

	* 43895: Completion/Unix/Command/_watch: Complete for
	procps/-ng watch

2018-12-17  Joey Pabalinas  <joeypabalinas@gmail.com>
